{
  "version": 4,
  "terraform_version": "1.3.9",
  "serial": 180,
  "lineage": "159a9871-676e-d11d-7bfc-bd803129fc99",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_application_gateway",
      "name": "network",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "authentication_certificate": [],
            "autoscale_configuration": [],
            "backend_address_pool": [
              {
                "fqdns": [],
                "id": "/subscriptions/cd1d2821-1fc2-4fa9-a4e7-be7dde3b3714/resourceGroups/az-104-06-rg5/providers/Microsoft.Network/applicationGateways/appgw/backendAddressPools/image-pool",
                "ip_addresses": [
                  "10.63.0.4"
                ],
                "name": "image-pool"
              },
              {
                "fqdns": [],
                "id": "/subscriptions/cd1d2821-1fc2-4fa9-a4e7-be7dde3b3714/resourceGroups/az-104-06-rg5/providers/Microsoft.Network/applicationGateways/appgw/backendAddressPools/video-pool",
                "ip_addresses": [
                  "10.62.0.4"
                ],
                "name": "video-pool"
              }
            ],
            "backend_http_settings": [
              {
                "affinity_cookie_name": "",
                "authentication_certificate": [],
                "connection_draining": [],
                "cookie_based_affinity": "Disabled",
                "host_name": "",
                "id": "/subscriptions/cd1d2821-1fc2-4fa9-a4e7-be7dde3b3714/resourceGroups/az-104-06-rg5/providers/Microsoft.Network/applicationGateways/appgw/backendHttpSettingsCollection/HTTPSetting",
                "name": "HTTPSetting",
                "path": "",
                "pick_host_name_from_backend_address": false,
                "port": 80,
                "probe_id": "",
                "probe_name": "",
                "protocol": "Http",
                "request_timeout": 60,
                "trusted_root_certificate_names": []
              }
            ],
            "custom_error_configuration": [],
            "enable_http2": false,
            "fips_enabled": false,
            "firewall_policy_id": null,
            "force_firewall_policy_association": false,
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/cd1d2821-1fc2-4fa9-a4e7-be7dde3b3714/resourceGroups/az-104-06-rg5/providers/Microsoft.Network/applicationGateways/appgw/frontendIPConfigurations/front-end-ip-config",
                "name": "front-end-ip-config",
                "private_ip_address": "",
                "private_ip_address_allocation": "Dynamic",
                "private_link_configuration_id": "",
                "private_link_configuration_name": "",
                "public_ip_address_id": "/subscriptions/cd1d2821-1fc2-4fa9-a4e7-be7dde3b3714/resourceGroups/az-104-06-rg5/providers/Microsoft.Network/publicIPAddresses/appgw-ip",
                "subnet_id": ""
              }
            ],
            "frontend_port": [
              {
                "id": "/subscriptions/cd1d2821-1fc2-4fa9-a4e7-be7dde3b3714/resourceGroups/az-104-06-rg5/providers/Microsoft.Network/applicationGateways/appgw/frontendPorts/front-end-port",
                "name": "front-end-port",
                "port": 80
              }
            ],
            "gateway_ip_configuration": [
              {
                "id": "/subscriptions/cd1d2821-1fc2-4fa9-a4e7-be7dde3b3714/resourceGroups/az-104-06-rg5/providers/Microsoft.Network/applicationGateways/appgw/gatewayIPConfigurations/my-gateway-ip-configuration",
                "name": "my-gateway-ip-configuration",
                "subnet_id": "/subscriptions/cd1d2821-1fc2-4fa9-a4e7-be7dde3b3714/resourceGroups/az-104-06-rg1/providers/Microsoft.Network/virtualNetworks/az104-06-vnet01/subnets/subnet-appgw"
              }
            ],
            "http_listener": [
              {
                "custom_error_configuration": [],
                "firewall_policy_id": "",
                "frontend_ip_configuration_id": "/subscriptions/cd1d2821-1fc2-4fa9-a4e7-be7dde3b3714/resourceGroups/az-104-06-rg5/providers/Microsoft.Network/applicationGateways/appgw/frontendIPConfigurations/front-end-ip-config",
                "frontend_ip_configuration_name": "front-end-ip-config",
                "frontend_port_id": "/subscriptions/cd1d2821-1fc2-4fa9-a4e7-be7dde3b3714/resourceGroups/az-104-06-rg5/providers/Microsoft.Network/applicationGateways/appgw/frontendPorts/front-end-port",
                "frontend_port_name": "front-end-port",
                "host_name": "",
                "host_names": [],
                "id": "/subscriptions/cd1d2821-1fc2-4fa9-a4e7-be7dde3b3714/resourceGroups/az-104-06-rg5/providers/Microsoft.Network/applicationGateways/appgw/httpListeners/listener-name",
                "name": "listener-name",
                "protocol": "Http",
                "require_sni": false,
                "ssl_certificate_id": "",
                "ssl_certificate_name": "",
                "ssl_profile_id": "",
                "ssl_profile_name": ""
              }
            ],
            "id": "/subscriptions/cd1d2821-1fc2-4fa9-a4e7-be7dde3b3714/resourceGroups/az-104-06-rg5/providers/Microsoft.Network/applicationGateways/appgw",
            "identity": [],
            "location": "eastus",
            "name": "appgw",
            "private_endpoint_connection": [],
            "private_link_configuration": [],
            "probe": [],
            "redirect_configuration": [],
            "request_routing_rule": [
              {
                "backend_address_pool_id": "",
                "backend_address_pool_name": "",
                "backend_http_settings_id": "",
                "backend_http_settings_name": "",
                "http_listener_id": "/subscriptions/cd1d2821-1fc2-4fa9-a4e7-be7dde3b3714/resourceGroups/az-104-06-rg5/providers/Microsoft.Network/applicationGateways/appgw/httpListeners/listener-name",
                "http_listener_name": "listener-name",
                "id": "/subscriptions/cd1d2821-1fc2-4fa9-a4e7-be7dde3b3714/resourceGroups/az-104-06-rg5/providers/Microsoft.Network/applicationGateways/appgw/requestRoutingRules/RoutingRuleA",
                "name": "RoutingRuleA",
                "priority": 0,
                "redirect_configuration_id": "",
                "redirect_configuration_name": "",
                "rewrite_rule_set_id": "",
                "rewrite_rule_set_name": "",
                "rule_type": "PathBasedRouting",
                "url_path_map_id": "/subscriptions/cd1d2821-1fc2-4fa9-a4e7-be7dde3b3714/resourceGroups/az-104-06-rg5/providers/Microsoft.Network/applicationGateways/appgw/urlPathMaps/RoutingPath",
                "url_path_map_name": "RoutingPath"
              }
            ],
            "resource_group_name": "az-104-06-rg5",
            "rewrite_rule_set": [],
            "sku": [
              {
                "capacity": 1,
                "name": "Standard_Small",
                "tier": "Standard"
              }
            ],
            "ssl_certificate": [],
            "ssl_policy": [
              {
                "cipher_suites": [],
                "disabled_protocols": [],
                "min_protocol_version": "",
                "policy_name": "AppGwSslPolicy20150501",
                "policy_type": "Predefined"
              }
            ],
            "ssl_profile": [],
            "tags": {},
            "timeouts": null,
            "trusted_client_certificate": [],
            "trusted_root_certificate": [],
            "url_path_map": [
              {
                "default_backend_address_pool_id": "/subscriptions/cd1d2821-1fc2-4fa9-a4e7-be7dde3b3714/resourceGroups/az-104-06-rg5/providers/Microsoft.Network/applicationGateways/appgw/backendAddressPools/video-pool",
                "default_backend_address_pool_name": "video-pool",
                "default_backend_http_settings_id": "/subscriptions/cd1d2821-1fc2-4fa9-a4e7-be7dde3b3714/resourceGroups/az-104-06-rg5/providers/Microsoft.Network/applicationGateways/appgw/backendHttpSettingsCollection/HTTPSetting",
                "default_backend_http_settings_name": "HTTPSetting",
                "default_redirect_configuration_id": "",
                "default_redirect_configuration_name": "",
                "default_rewrite_rule_set_id": "",
                "default_rewrite_rule_set_name": "",
                "id": "/subscriptions/cd1d2821-1fc2-4fa9-a4e7-be7dde3b3714/resourceGroups/az-104-06-rg5/providers/Microsoft.Network/applicationGateways/appgw/urlPathMaps/RoutingPath",
                "name": "RoutingPath",
                "path_rule": [
                  {
                    "backend_address_pool_id": "/subscriptions/cd1d2821-1fc2-4fa9-a4e7-be7dde3b3714/resourceGroups/az-104-06-rg5/providers/Microsoft.Network/applicationGateways/appgw/backendAddressPools/video-pool",
                    "backend_address_pool_name": "video-pool",
                    "backend_http_settings_id": "/subscriptions/cd1d2821-1fc2-4fa9-a4e7-be7dde3b3714/resourceGroups/az-104-06-rg5/providers/Microsoft.Network/applicationGateways/appgw/backendHttpSettingsCollection/HTTPSetting",
                    "backend_http_settings_name": "HTTPSetting",
                    "firewall_policy_id": "",
                    "id": "/subscriptions/cd1d2821-1fc2-4fa9-a4e7-be7dde3b3714/resourceGroups/az-104-06-rg5/providers/Microsoft.Network/applicationGateways/appgw/urlPathMaps/RoutingPath/pathRules/VideoRoutingRule",
                    "name": "VideoRoutingRule",
                    "paths": [
                      "/videos/*"
                    ],
                    "redirect_configuration_id": "",
                    "redirect_configuration_name": "",
                    "rewrite_rule_set_id": "",
                    "rewrite_rule_set_name": ""
                  },
                  {
                    "backend_address_pool_id": "/subscriptions/cd1d2821-1fc2-4fa9-a4e7-be7dde3b3714/resourceGroups/az-104-06-rg5/providers/Microsoft.Network/applicationGateways/appgw/backendAddressPools/image-pool",
                    "backend_address_pool_name": "image-pool",
                    "backend_http_settings_id": "/subscriptions/cd1d2821-1fc2-4fa9-a4e7-be7dde3b3714/resourceGroups/az-104-06-rg5/providers/Microsoft.Network/applicationGateways/appgw/backendHttpSettingsCollection/HTTPSetting",
                    "backend_http_settings_name": "HTTPSetting",
                    "firewall_policy_id": "",
                    "id": "/subscriptions/cd1d2821-1fc2-4fa9-a4e7-be7dde3b3714/resourceGroups/az-104-06-rg5/providers/Microsoft.Network/applicationGateways/appgw/urlPathMaps/RoutingPath/pathRules/ImageRoutingRule",
                    "name": "ImageRoutingRule",
                    "paths": [
                      "/images/*"
                    ],
                    "redirect_configuration_id": "",
                    "redirect_configuration_name": "",
                    "rewrite_rule_set_id": "",
                    "rewrite_rule_set_name": ""
                  }
                ]
              }
            ],
            "waf_configuration": [],
            "zones": []
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_interface.nic1",
            "azurerm_network_interface.nic3",
            "azurerm_public_ip.az104-06-pip5",
            "azurerm_resource_group.RG",
            "azurerm_resource_group.appgw_rg",
            "azurerm_subnet.vnet1_subnet_appgw",
            "azurerm_subnet.vnet2_subnet21",
            "azurerm_subnet.vnet3_subnet31",
            "azurerm_virtual_network.vnet1",
            "azurerm_virtual_network.vnet2",
            "azurerm_virtual_network.vnet3"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb",
      "name": "az104-06-lb4",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/cd1d2821-1fc2-4fa9-a4e7-be7dde3b3714/resourceGroups/az-104-06-rg4/providers/Microsoft.Network/loadBalancers/LoadBalancer/frontendIPConfigurations/PublicIPAddress",
                "load_balancer_rules": [
                  "/subscriptions/cd1d2821-1fc2-4fa9-a4e7-be7dde3b3714/resourceGroups/az-104-06-rg4/providers/Microsoft.Network/loadBalancers/LoadBalancer/loadBalancingRules/LBRulea"
                ],
                "name": "PublicIPAddress",
                "private_ip_address_allocation": "Dynamic",
                "public_ip_address_id": "/subscriptions/cd1d2821-1fc2-4fa9-a4e7-be7dde3b3714/resourceGroups/az-104-06-rg4/providers/Microsoft.Network/publicIPAddresses/PublicIPForLB"
              }
            ],
            "id": "/subscriptions/cd1d2821-1fc2-4fa9-a4e7-be7dde3b3714/resourceGroups/az-104-06-rg4/providers/Microsoft.Network/loadBalancers/LoadBalancer",
            "location": "eastus",
            "name": "LoadBalancer",
            "resource_group_name": "az-104-06-rg4",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_public_ip.az104-06-pip4",
            "azurerm_resource_group.lb_rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_backend_address_pool",
      "name": "poolA",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/cd1d2821-1fc2-4fa9-a4e7-be7dde3b3714/resourceGroups/az-104-06-rg4/providers/Microsoft.Network/loadBalancers/LoadBalancer/backendAddressPools/BackEndAddressPool",
            "loadbalancer_id": "/subscriptions/cd1d2821-1fc2-4fa9-a4e7-be7dde3b3714/resourceGroups/az-104-06-rg4/providers/Microsoft.Network/loadBalancers/LoadBalancer",
            "name": "BackEndAddressPool"
          },
          "dependencies": [
            "azurerm_lb.az104-06-lb4",
            "azurerm_public_ip.az104-06-pip4",
            "azurerm_resource_group.lb_rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_backend_address_pool_address",
      "name": "appvm1_address",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/cd1d2821-1fc2-4fa9-a4e7-be7dde3b3714/resourceGroups/az-104-06-rg4/providers/Microsoft.Network/loadBalancers/LoadBalancer/backendAddressPools/BackEndAddressPool",
            "id": "/subscriptions/cd1d2821-1fc2-4fa9-a4e7-be7dde3b3714/resourceGroups/az-104-06-rg4/providers/Microsoft.Network/loadBalancers/LoadBalancer/backendAddressPools/BackEndAddressPool/addresses/appvm1",
            "ip_address": "10.60.0.4",
            "name": "appvm1",
            "virtual_network_id": "/subscriptions/cd1d2821-1fc2-4fa9-a4e7-be7dde3b3714/resourceGroups/az-104-06-rg1/providers/Microsoft.Network/virtualNetworks/az104-06-vnet01"
          },
          "dependencies": [
            "azurerm_lb.az104-06-lb4",
            "azurerm_lb_backend_address_pool.poolA",
            "azurerm_network_interface.nic0",
            "azurerm_public_ip.az104-06-pip4",
            "azurerm_resource_group.RG",
            "azurerm_resource_group.lb_rg",
            "azurerm_subnet.vnet1_subnet11",
            "azurerm_virtual_network.vnet1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_backend_address_pool_address",
      "name": "appvm2_address",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/cd1d2821-1fc2-4fa9-a4e7-be7dde3b3714/resourceGroups/az-104-06-rg4/providers/Microsoft.Network/loadBalancers/LoadBalancer/backendAddressPools/BackEndAddressPool",
            "id": "/subscriptions/cd1d2821-1fc2-4fa9-a4e7-be7dde3b3714/resourceGroups/az-104-06-rg4/providers/Microsoft.Network/loadBalancers/LoadBalancer/backendAddressPools/BackEndAddressPool/addresses/appvm2",
            "ip_address": "10.60.1.4",
            "name": "appvm2",
            "virtual_network_id": "/subscriptions/cd1d2821-1fc2-4fa9-a4e7-be7dde3b3714/resourceGroups/az-104-06-rg1/providers/Microsoft.Network/virtualNetworks/az104-06-vnet01"
          },
          "dependencies": [
            "azurerm_lb.az104-06-lb4",
            "azurerm_lb_backend_address_pool.poolA",
            "azurerm_network_interface.nic01",
            "azurerm_public_ip.az104-06-pip4",
            "azurerm_resource_group.RG",
            "azurerm_resource_group.lb_rg",
            "azurerm_subnet.vnet1_subnet12",
            "azurerm_virtual_network.vnet1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_probe",
      "name": "probe-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/cd1d2821-1fc2-4fa9-a4e7-be7dde3b3714/resourceGroups/az-104-06-rg4/providers/Microsoft.Network/loadBalancers/LoadBalancer/probes/ssh-running-probe",
            "interval_in_seconds": 15,
            "load_balancer_rules": [
              "/subscriptions/cd1d2821-1fc2-4fa9-a4e7-be7dde3b3714/resourceGroups/az-104-06-rg4/providers/Microsoft.Network/loadBalancers/LoadBalancer/loadBalancingRules/LBRulea"
            ],
            "loadbalancer_id": "/subscriptions/cd1d2821-1fc2-4fa9-a4e7-be7dde3b3714/resourceGroups/az-104-06-rg4/providers/Microsoft.Network/loadBalancers/LoadBalancer",
            "name": "ssh-running-probe",
            "number_of_probes": 2,
            "port": 80,
            "protocol": "Tcp"
          },
          "dependencies": [
            "azurerm_lb.az104-06-lb4",
            "azurerm_public_ip.az104-06-pip4",
            "azurerm_resource_group.lb_rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_rule",
      "name": "lb-ruleA",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_port": 80,
            "disable_outbound_snat": false,
            "enable_floating_ip": false,
            "enable_tcp_reset": false,
            "frontend_ip_configuration_id": "/subscriptions/cd1d2821-1fc2-4fa9-a4e7-be7dde3b3714/resourceGroups/az-104-06-rg4/providers/Microsoft.Network/loadBalancers/LoadBalancer/frontendIPConfigurations/PublicIPAddress",
            "frontend_ip_configuration_name": "PublicIPAddress",
            "frontend_port": 80,
            "id": "/subscriptions/cd1d2821-1fc2-4fa9-a4e7-be7dde3b3714/resourceGroups/az-104-06-rg4/providers/Microsoft.Network/loadBalancers/LoadBalancer/loadBalancingRules/LBRulea",
            "idle_timeout_in_minutes": 4,
            "load_distribution": "Default",
            "loadbalancer_id": "/subscriptions/cd1d2821-1fc2-4fa9-a4e7-be7dde3b3714/resourceGroups/az-104-06-rg4/providers/Microsoft.Network/loadBalancers/LoadBalancer",
            "name": "LBRulea",
            "probe_id": "/subscriptions/cd1d2821-1fc2-4fa9-a4e7-be7dde3b3714/resourceGroups/az-104-06-rg4/providers/Microsoft.Network/loadBalancers/LoadBalancer/probes/ssh-running-probe",
            "protocol": "Tcp"
          },
          "dependencies": [
            "azurerm_lb.az104-06-lb4",
            "azurerm_lb_probe.probe-1",
            "azurerm_public_ip.az104-06-pip4",
            "azurerm_resource_group.lb_rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic0",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/cd1d2821-1fc2-4fa9-a4e7-be7dde3b3714/resourceGroups/az-104-06-rg1/providers/Microsoft.Network/networkInterfaces/nic0-vm0-vnet1",
            "internal_domain_name_suffix": "mlfnwleybslelcirlotywc2oec.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "testconfiguration1",
                "primary": true,
                "private_ip_address": "10.60.0.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/cd1d2821-1fc2-4fa9-a4e7-be7dde3b3714/resourceGroups/az-104-06-rg1/providers/Microsoft.Network/virtualNetworks/az104-06-vnet01/subnets/subnet1"
              }
            ],
            "location": "eastus",
            "mac_address": "00-0D-3A-9C-35-18",
            "name": "nic0-vm0-vnet1",
            "private_ip_address": "10.60.0.4",
            "private_ip_addresses": [
              "10.60.0.4"
            ],
            "resource_group_name": "az-104-06-rg1",
            "virtual_machine_id": "/subscriptions/cd1d2821-1fc2-4fa9-a4e7-be7dde3b3714/resourceGroups/AZ-104-06-RG1/providers/Microsoft.Compute/virtualMachines/az104-06-vm0"
          },
          "dependencies": [
            "azurerm_resource_group.RG",
            "azurerm_subnet.vnet1_subnet11",
            "azurerm_virtual_network.vnet1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic01",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/cd1d2821-1fc2-4fa9-a4e7-be7dde3b3714/resourceGroups/az-104-06-rg1/providers/Microsoft.Network/networkInterfaces/nic01-vm1-vnet1",
            "internal_domain_name_suffix": "mlfnwleybslelcirlotywc2oec.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "testconfiguration1",
                "primary": true,
                "private_ip_address": "10.60.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/cd1d2821-1fc2-4fa9-a4e7-be7dde3b3714/resourceGroups/az-104-06-rg1/providers/Microsoft.Network/virtualNetworks/az104-06-vnet01/subnets/subnet2"
              }
            ],
            "location": "eastus",
            "mac_address": "00-22-48-27-FC-75",
            "name": "nic01-vm1-vnet1",
            "private_ip_address": "10.60.1.4",
            "private_ip_addresses": [
              "10.60.1.4"
            ],
            "resource_group_name": "az-104-06-rg1",
            "virtual_machine_id": "/subscriptions/cd1d2821-1fc2-4fa9-a4e7-be7dde3b3714/resourceGroups/AZ-104-06-RG1/providers/Microsoft.Compute/virtualMachines/az104-06-vm1"
          },
          "dependencies": [
            "azurerm_resource_group.RG",
            "azurerm_subnet.vnet1_subnet12",
            "azurerm_virtual_network.vnet1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/cd1d2821-1fc2-4fa9-a4e7-be7dde3b3714/resourceGroups/az-104-06-rg1/providers/Microsoft.Network/networkInterfaces/nic1-vm1-vnet2",
            "internal_domain_name_suffix": "myc53042negunlxo1klenr1c5e.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "testconfiguration1",
                "primary": true,
                "private_ip_address": "10.62.0.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/cd1d2821-1fc2-4fa9-a4e7-be7dde3b3714/resourceGroups/az-104-06-rg1/providers/Microsoft.Network/virtualNetworks/az104-06-vnet2/subnets/subnet1"
              }
            ],
            "location": "eastus",
            "mac_address": "00-22-48-27-F2-9B",
            "name": "nic1-vm1-vnet2",
            "private_ip_address": "10.62.0.4",
            "private_ip_addresses": [
              "10.62.0.4"
            ],
            "resource_group_name": "az-104-06-rg1",
            "virtual_machine_id": "/subscriptions/cd1d2821-1fc2-4fa9-a4e7-be7dde3b3714/resourceGroups/AZ-104-06-RG1/providers/Microsoft.Compute/virtualMachines/az104-06-vm2"
          },
          "dependencies": [
            "azurerm_resource_group.RG",
            "azurerm_subnet.vnet2_subnet21",
            "azurerm_virtual_network.vnet2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic3",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/cd1d2821-1fc2-4fa9-a4e7-be7dde3b3714/resourceGroups/az-104-06-rg1/providers/Microsoft.Network/networkInterfaces/nic3-vm3-vnet3",
            "internal_domain_name_suffix": "brquylbyr5oetghuoliluykete.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "testconfiguration1",
                "primary": true,
                "private_ip_address": "10.63.0.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/cd1d2821-1fc2-4fa9-a4e7-be7dde3b3714/resourceGroups/az-104-06-rg1/providers/Microsoft.Network/virtualNetworks/az104-06-vnet3/subnets/subnet1"
              }
            ],
            "location": "eastus",
            "mac_address": "00-22-48-21-58-BC",
            "name": "nic3-vm3-vnet3",
            "private_ip_address": "10.63.0.4",
            "private_ip_addresses": [
              "10.63.0.4"
            ],
            "resource_group_name": "az-104-06-rg1",
            "virtual_machine_id": "/subscriptions/cd1d2821-1fc2-4fa9-a4e7-be7dde3b3714/resourceGroups/az-104-06-rg1/providers/Microsoft.Compute/virtualMachines/az104-06-vm3"
          },
          "dependencies": [
            "azurerm_resource_group.RG",
            "azurerm_subnet.vnet3_subnet31",
            "azurerm_virtual_network.vnet3"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "nsg-ass-s3",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/cd1d2821-1fc2-4fa9-a4e7-be7dde3b3714/resourceGroups/az-104-06-rg1/providers/Microsoft.Network/networkInterfaces/nic3-vm3-vnet3|/subscriptions/cd1d2821-1fc2-4fa9-a4e7-be7dde3b3714/resourceGroups/az-104-06-rg1/providers/Microsoft.Network/networkSecurityGroups/az104-06-vm3-nsg",
            "network_interface_id": "/subscriptions/cd1d2821-1fc2-4fa9-a4e7-be7dde3b3714/resourceGroups/az-104-06-rg1/providers/Microsoft.Network/networkInterfaces/nic3-vm3-vnet3",
            "network_security_group_id": "/subscriptions/cd1d2821-1fc2-4fa9-a4e7-be7dde3b3714/resourceGroups/az-104-06-rg1/providers/Microsoft.Network/networkSecurityGroups/az104-06-vm3-nsg"
          },
          "dependencies": [
            "azurerm_network_interface.nic3",
            "azurerm_network_security_group.nsg3",
            "azurerm_resource_group.RG",
            "azurerm_subnet.vnet3_subnet31",
            "azurerm_virtual_network.vnet3"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "nsg0-ass-s11",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/cd1d2821-1fc2-4fa9-a4e7-be7dde3b3714/resourceGroups/az-104-06-rg1/providers/Microsoft.Network/networkInterfaces/nic0-vm0-vnet1|/subscriptions/cd1d2821-1fc2-4fa9-a4e7-be7dde3b3714/resourceGroups/az-104-06-rg1/providers/Microsoft.Network/networkSecurityGroups/az104-06-vm0-nsg",
            "network_interface_id": "/subscriptions/cd1d2821-1fc2-4fa9-a4e7-be7dde3b3714/resourceGroups/az-104-06-rg1/providers/Microsoft.Network/networkInterfaces/nic0-vm0-vnet1",
            "network_security_group_id": "/subscriptions/cd1d2821-1fc2-4fa9-a4e7-be7dde3b3714/resourceGroups/az-104-06-rg1/providers/Microsoft.Network/networkSecurityGroups/az104-06-vm0-nsg"
          },
          "dependencies": [
            "azurerm_network_interface.nic0",
            "azurerm_network_security_group.nsg0",
            "azurerm_resource_group.RG",
            "azurerm_subnet.vnet1_subnet11",
            "azurerm_virtual_network.vnet1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "nsg01-ass-s12",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/cd1d2821-1fc2-4fa9-a4e7-be7dde3b3714/resourceGroups/az-104-06-rg1/providers/Microsoft.Network/networkInterfaces/nic01-vm1-vnet1|/subscriptions/cd1d2821-1fc2-4fa9-a4e7-be7dde3b3714/resourceGroups/az-104-06-rg1/providers/Microsoft.Network/networkSecurityGroups/az104-06-vm1-nsg",
            "network_interface_id": "/subscriptions/cd1d2821-1fc2-4fa9-a4e7-be7dde3b3714/resourceGroups/az-104-06-rg1/providers/Microsoft.Network/networkInterfaces/nic01-vm1-vnet1",
            "network_security_group_id": "/subscriptions/cd1d2821-1fc2-4fa9-a4e7-be7dde3b3714/resourceGroups/az-104-06-rg1/providers/Microsoft.Network/networkSecurityGroups/az104-06-vm1-nsg"
          },
          "dependencies": [
            "azurerm_network_interface.nic01",
            "azurerm_network_security_group.nsg01",
            "azurerm_resource_group.RG",
            "azurerm_subnet.vnet1_subnet12",
            "azurerm_virtual_network.vnet1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "nsg1-ass-s2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/cd1d2821-1fc2-4fa9-a4e7-be7dde3b3714/resourceGroups/az-104-06-rg1/providers/Microsoft.Network/networkInterfaces/nic1-vm1-vnet2|/subscriptions/cd1d2821-1fc2-4fa9-a4e7-be7dde3b3714/resourceGroups/az-104-06-rg1/providers/Microsoft.Network/networkSecurityGroups/az104-06-vm2-nsg",
            "network_interface_id": "/subscriptions/cd1d2821-1fc2-4fa9-a4e7-be7dde3b3714/resourceGroups/az-104-06-rg1/providers/Microsoft.Network/networkInterfaces/nic1-vm1-vnet2",
            "network_security_group_id": "/subscriptions/cd1d2821-1fc2-4fa9-a4e7-be7dde3b3714/resourceGroups/az-104-06-rg1/providers/Microsoft.Network/networkSecurityGroups/az104-06-vm2-nsg"
          },
          "dependencies": [
            "azurerm_network_interface.nic1",
            "azurerm_network_security_group.nsg1",
            "azurerm_resource_group.RG",
            "azurerm_subnet.vnet2_subnet21",
            "azurerm_virtual_network.vnet2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg0",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/cd1d2821-1fc2-4fa9-a4e7-be7dde3b3714/resourceGroups/az-104-06-rg1/providers/Microsoft.Network/networkSecurityGroups/az104-06-vm0-nsg",
            "location": "eastus",
            "name": "az104-06-vm0-nsg",
            "resource_group_name": "az-104-06-rg1",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3389",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "allow-rdp-inbound",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.RG"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg01",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/cd1d2821-1fc2-4fa9-a4e7-be7dde3b3714/resourceGroups/az-104-06-rg1/providers/Microsoft.Network/networkSecurityGroups/az104-06-vm1-nsg",
            "location": "eastus",
            "name": "az104-06-vm1-nsg",
            "resource_group_name": "az-104-06-rg1",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3389",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "allow-rdp-inbound",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.RG"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/cd1d2821-1fc2-4fa9-a4e7-be7dde3b3714/resourceGroups/az-104-06-rg1/providers/Microsoft.Network/networkSecurityGroups/az104-06-vm2-nsg",
            "location": "eastus",
            "name": "az104-06-vm2-nsg",
            "resource_group_name": "az-104-06-rg1",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allow_HTTP",
                "priority": 200,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.RG"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg3",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/cd1d2821-1fc2-4fa9-a4e7-be7dde3b3714/resourceGroups/az-104-06-rg1/providers/Microsoft.Network/networkSecurityGroups/az104-06-vm3-nsg",
            "location": "eastus",
            "name": "az104-06-vm3-nsg",
            "resource_group_name": "az-104-06-rg1",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allow_HTTP",
                "priority": 200,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.RG"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "PIP-vnetgateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "id": "/subscriptions/cd1d2821-1fc2-4fa9-a4e7-be7dde3b3714/resourceGroups/az-104-06-rg1/providers/Microsoft.Network/publicIPAddresses/pip-for-vnetgateway",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.232.203.228",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "pip-for-vnetgateway",
            "resource_group_name": "az-104-06-rg1",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.RG"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "az104-06-pip4",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "id": "/subscriptions/cd1d2821-1fc2-4fa9-a4e7-be7dde3b3714/resourceGroups/az-104-06-rg4/providers/Microsoft.Network/publicIPAddresses/PublicIPForLB",
            "idle_timeout_in_minutes": 4,
            "ip_address": "40.121.57.238",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "PublicIPForLB",
            "resource_group_name": "az-104-06-rg4",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.lb_rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "az104-06-pip5",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "fqdn": "5582c03d-26f9-4fc8-9210-168e404c0761.cloudapp.net",
            "id": "/subscriptions/cd1d2821-1fc2-4fa9-a4e7-be7dde3b3714/resourceGroups/az-104-06-rg5/providers/Microsoft.Network/publicIPAddresses/appgw-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "74.235.169.0",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "appgw-ip",
            "resource_group_name": "az-104-06-rg5",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.appgw_rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_route_table",
      "name": "az104-rt23",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "disable_bgp_route_propagation": false,
            "id": "/subscriptions/cd1d2821-1fc2-4fa9-a4e7-be7dde3b3714/resourceGroups/az-104-06-rg1/providers/Microsoft.Network/routeTables/routetable-2to3",
            "location": "eastus",
            "name": "routetable-2to3",
            "resource_group_name": "az-104-06-rg1",
            "route": [
              {
                "address_prefix": "10.63.0.0/24",
                "name": "2to3",
                "next_hop_in_ip_address": "10.60.0.4",
                "next_hop_type": "VirtualAppliance"
              }
            ],
            "subnets": [
              "/subscriptions/cd1d2821-1fc2-4fa9-a4e7-be7dde3b3714/resourceGroups/az-104-06-rg1/providers/Microsoft.Network/virtualNetworks/az104-06-vnet2/subnets/subnet1"
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.RG"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_route_table",
      "name": "az104-rt32",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "disable_bgp_route_propagation": false,
            "id": "/subscriptions/cd1d2821-1fc2-4fa9-a4e7-be7dde3b3714/resourceGroups/az-104-06-rg1/providers/Microsoft.Network/routeTables/routetable-3to2",
            "location": "eastus",
            "name": "routetable-3to2",
            "resource_group_name": "az-104-06-rg1",
            "route": [
              {
                "address_prefix": "10.62.0.0/24",
                "name": "routetable-3to2",
                "next_hop_in_ip_address": "10.60.0.4",
                "next_hop_type": "VirtualAppliance"
              }
            ],
            "subnets": [
              "/subscriptions/cd1d2821-1fc2-4fa9-a4e7-be7dde3b3714/resourceGroups/az-104-06-rg1/providers/Microsoft.Network/virtualNetworks/az104-06-vnet3/subnets/subnet1"
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.RG"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "vnet1_subnet11",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.60.0.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/cd1d2821-1fc2-4fa9-a4e7-be7dde3b3714/resourceGroups/az-104-06-rg1/providers/Microsoft.Network/virtualNetworks/az104-06-vnet01/subnets/subnet1",
            "name": "subnet1",
            "resource_group_name": "az-104-06-rg1",
            "virtual_network_name": "az104-06-vnet01"
          },
          "dependencies": [
            "azurerm_resource_group.RG",
            "azurerm_virtual_network.vnet1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "vnet1_subnet12",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.60.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/cd1d2821-1fc2-4fa9-a4e7-be7dde3b3714/resourceGroups/az-104-06-rg1/providers/Microsoft.Network/virtualNetworks/az104-06-vnet01/subnets/subnet2",
            "name": "subnet2",
            "resource_group_name": "az-104-06-rg1",
            "virtual_network_name": "az104-06-vnet01"
          },
          "dependencies": [
            "azurerm_resource_group.RG",
            "azurerm_virtual_network.vnet1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "vnet1_subnet_appgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.60.3.224/27"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/cd1d2821-1fc2-4fa9-a4e7-be7dde3b3714/resourceGroups/az-104-06-rg1/providers/Microsoft.Network/virtualNetworks/az104-06-vnet01/subnets/subnet-appgw",
            "name": "subnet-appgw",
            "resource_group_name": "az-104-06-rg1",
            "virtual_network_name": "az104-06-vnet01"
          },
          "dependencies": [
            "azurerm_resource_group.RG",
            "azurerm_virtual_network.vnet1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "vnet1_subnet_vnetgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.60.2.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/cd1d2821-1fc2-4fa9-a4e7-be7dde3b3714/resourceGroups/az-104-06-rg1/providers/Microsoft.Network/virtualNetworks/az104-06-vnet01/subnets/GatewaySubnet",
            "name": "GatewaySubnet",
            "resource_group_name": "az-104-06-rg1",
            "virtual_network_name": "az104-06-vnet01"
          },
          "dependencies": [
            "azurerm_resource_group.RG",
            "azurerm_virtual_network.vnet1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "vnet2_subnet21",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.62.0.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/cd1d2821-1fc2-4fa9-a4e7-be7dde3b3714/resourceGroups/az-104-06-rg1/providers/Microsoft.Network/virtualNetworks/az104-06-vnet2/subnets/subnet1",
            "name": "subnet1",
            "resource_group_name": "az-104-06-rg1",
            "virtual_network_name": "az104-06-vnet2"
          },
          "dependencies": [
            "azurerm_resource_group.RG",
            "azurerm_virtual_network.vnet2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "vnet3_subnet31",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.63.0.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/cd1d2821-1fc2-4fa9-a4e7-be7dde3b3714/resourceGroups/az-104-06-rg1/providers/Microsoft.Network/virtualNetworks/az104-06-vnet3/subnets/subnet1",
            "name": "subnet1",
            "resource_group_name": "az-104-06-rg1",
            "virtual_network_name": "az104-06-vnet3"
          },
          "dependencies": [
            "azurerm_resource_group.RG",
            "azurerm_virtual_network.vnet3"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_route_table_association",
      "name": "route-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/cd1d2821-1fc2-4fa9-a4e7-be7dde3b3714/resourceGroups/az-104-06-rg1/providers/Microsoft.Network/virtualNetworks/az104-06-vnet2/subnets/subnet1",
            "route_table_id": "/subscriptions/cd1d2821-1fc2-4fa9-a4e7-be7dde3b3714/resourceGroups/az-104-06-rg1/providers/Microsoft.Network/routeTables/routetable-2to3",
            "subnet_id": "/subscriptions/cd1d2821-1fc2-4fa9-a4e7-be7dde3b3714/resourceGroups/az-104-06-rg1/providers/Microsoft.Network/virtualNetworks/az104-06-vnet2/subnets/subnet1"
          },
          "dependencies": [
            "azurerm_resource_group.RG",
            "azurerm_route_table.az104-rt23",
            "azurerm_subnet.vnet2_subnet21",
            "azurerm_virtual_network.vnet2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_route_table_association",
      "name": "route-association1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/cd1d2821-1fc2-4fa9-a4e7-be7dde3b3714/resourceGroups/az-104-06-rg1/providers/Microsoft.Network/virtualNetworks/az104-06-vnet3/subnets/subnet1",
            "route_table_id": "/subscriptions/cd1d2821-1fc2-4fa9-a4e7-be7dde3b3714/resourceGroups/az-104-06-rg1/providers/Microsoft.Network/routeTables/routetable-3to2",
            "subnet_id": "/subscriptions/cd1d2821-1fc2-4fa9-a4e7-be7dde3b3714/resourceGroups/az-104-06-rg1/providers/Microsoft.Network/virtualNetworks/az104-06-vnet3/subnets/subnet1"
          },
          "dependencies": [
            "azurerm_resource_group.RG",
            "azurerm_route_table.az104-rt32",
            "azurerm_subnet.vnet3_subnet31",
            "azurerm_virtual_network.vnet3"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.60.0.0/22"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "2cdbca62-0c98-4596-8911-5ba78b0b8e22",
            "id": "/subscriptions/cd1d2821-1fc2-4fa9-a4e7-be7dde3b3714/resourceGroups/az-104-06-rg1/providers/Microsoft.Network/virtualNetworks/az104-06-vnet01",
            "location": "eastus",
            "name": "az104-06-vnet01",
            "resource_group_name": "az-104-06-rg1",
            "subnet": [
              {
                "address_prefix": "10.60.0.0/24",
                "id": "/subscriptions/cd1d2821-1fc2-4fa9-a4e7-be7dde3b3714/resourceGroups/az-104-06-rg1/providers/Microsoft.Network/virtualNetworks/az104-06-vnet01/subnets/subnet1",
                "name": "subnet1"
              },
              {
                "address_prefix": "10.60.1.0/24",
                "id": "/subscriptions/cd1d2821-1fc2-4fa9-a4e7-be7dde3b3714/resourceGroups/az-104-06-rg1/providers/Microsoft.Network/virtualNetworks/az104-06-vnet01/subnets/subnet2",
                "name": "subnet2"
              },
              {
                "address_prefix": "10.60.2.0/24",
                "id": "/subscriptions/cd1d2821-1fc2-4fa9-a4e7-be7dde3b3714/resourceGroups/az-104-06-rg1/providers/Microsoft.Network/virtualNetworks/az104-06-vnet01/subnets/GatewaySubnet",
                "name": "GatewaySubnet"
              },
              {
                "address_prefix": "10.60.3.224/27",
                "id": "/subscriptions/cd1d2821-1fc2-4fa9-a4e7-be7dde3b3714/resourceGroups/az-104-06-rg1/providers/Microsoft.Network/virtualNetworks/az104-06-vnet01/subnets/subnet-appgw",
                "name": "subnet-appgw"
              }
            ]
          },
          "dependencies": [
            "azurerm_resource_group.RG"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.62.0.0/22"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "ebfe0566-69dc-460d-aeee-da9646c762fc",
            "id": "/subscriptions/cd1d2821-1fc2-4fa9-a4e7-be7dde3b3714/resourceGroups/az-104-06-rg1/providers/Microsoft.Network/virtualNetworks/az104-06-vnet2",
            "location": "eastus",
            "name": "az104-06-vnet2",
            "resource_group_name": "az-104-06-rg1",
            "subnet": [
              {
                "address_prefix": "10.62.0.0/24",
                "id": "/subscriptions/cd1d2821-1fc2-4fa9-a4e7-be7dde3b3714/resourceGroups/az-104-06-rg1/providers/Microsoft.Network/virtualNetworks/az104-06-vnet2/subnets/subnet1",
                "name": "subnet1"
              }
            ]
          },
          "dependencies": [
            "azurerm_resource_group.RG"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet3",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.63.0.0/22"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "2c4c610c-8f38-49dc-98f4-72d0ba61449c",
            "id": "/subscriptions/cd1d2821-1fc2-4fa9-a4e7-be7dde3b3714/resourceGroups/az-104-06-rg1/providers/Microsoft.Network/virtualNetworks/az104-06-vnet3",
            "location": "eastus",
            "name": "az104-06-vnet3",
            "resource_group_name": "az-104-06-rg1",
            "subnet": [
              {
                "address_prefix": "10.63.0.0/24",
                "id": "/subscriptions/cd1d2821-1fc2-4fa9-a4e7-be7dde3b3714/resourceGroups/az-104-06-rg1/providers/Microsoft.Network/virtualNetworks/az104-06-vnet3/subnets/subnet1",
                "name": "subnet1"
              }
            ]
          },
          "dependencies": [
            "azurerm_resource_group.RG"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network_gateway",
      "name": "Vnet-gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "active_active": false,
            "bgp_settings": [
              {
                "asn": 65515,
                "peer_weight": 0,
                "peering_addresses": [
                  {
                    "default_addresses": [
                      "10.60.2.254"
                    ],
                    "ip_configuration_name": "vnetGatewayConfig",
                    "tunnel_ip_addresses": [
                      "20.232.203.228"
                    ]
                  }
                ]
              }
            ],
            "enable_bgp": false,
            "generation": "Generation1",
            "id": "/subscriptions/cd1d2821-1fc2-4fa9-a4e7-be7dde3b3714/resourceGroups/az-104-06-rg1/providers/Microsoft.Network/virtualNetworkGateways/Vnet-gateway-hubspoke",
            "ip_configuration": [
              {
                "name": "vnetGatewayConfig",
                "private_ip_address_allocation": "Dynamic",
                "public_ip_address_id": "/subscriptions/cd1d2821-1fc2-4fa9-a4e7-be7dde3b3714/resourceGroups/az-104-06-rg1/providers/Microsoft.Network/publicIPAddresses/pip-for-vnetgateway",
                "subnet_id": "/subscriptions/cd1d2821-1fc2-4fa9-a4e7-be7dde3b3714/resourceGroups/az-104-06-rg1/providers/Microsoft.Network/virtualNetworks/az104-06-vnet01/subnets/GatewaySubnet"
              }
            ],
            "location": "eastus",
            "name": "Vnet-gateway-hubspoke",
            "private_ip_address_enabled": false,
            "resource_group_name": "az-104-06-rg1",
            "sku": "VpnGw1",
            "type": "Vpn",
            "vpn_client_configuration": [
              {
                "address_space": [
                  "10.2.0.0/24"
                ],
                "revoked_certificate": [
                  {
                    "name": "Verizon-Global-Root-CA",
                    "thumbprint": "912198EEF23DCAC40939312FEE97DD560BAE49B1"
                  }
                ],
                "root_certificate": [
                  {
                    "name": "DigiCert-Federated-ID-Root-CA",
                    "public_cert_data": "MIIDuzCCAqOgAwIBAgIQCHTZWCM+IlfFIRXIvyKSrjANBgkqhkiG9w0BAQsFADBn\r\nMQswCQYDVQQGEwJVUzEVMBMGA1UEChMMRGlnaUNlcnQgSW5jMRkwFwYDVQQLExB3\r\nd3cuZGlnaWNlcnQuY29tMSYwJAYDVQQDEx1EaWdpQ2VydCBGZWRlcmF0ZWQgSUQg\r\nUm9vdCBDQTAeFw0xMzAxMTUxMjAwMDBaFw0zMzAxMTUxMjAwMDBaMGcxCzAJBgNV\r\nBAYTAlVTMRUwEwYDVQQKEwxEaWdpQ2VydCBJbmMxGTAXBgNVBAsTEHd3dy5kaWdp\r\nY2VydC5jb20xJjAkBgNVBAMTHURpZ2lDZXJ0IEZlZGVyYXRlZCBJRCBSb290IENB\r\nMIIBIjANBgkqhkiG9w0BAQEFAAOCAQ8AMIIBCgKCAQEAvAEB4pc [...]
                  }
                ],
                "vpn_auth_types": [
                  "Certificate"
                ],
                "vpn_client_protocols": [
                  "IkeV2",
                  "OpenVPN"
                ]
              }
            ],
            "vpn_type": "RouteBased"
          },
          "dependencies": [
            "azurerm_public_ip.PIP-vnetgateway",
            "azurerm_resource_group.RG",
            "azurerm_subnet.vnet1_subnet_vnetgw",
            "azurerm_virtual_network.vnet1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "vnet1tovnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": false,
            "allow_gateway_transit": false,
            "allow_virtual_network_access": true,
            "id": "/subscriptions/cd1d2821-1fc2-4fa9-a4e7-be7dde3b3714/resourceGroups/az-104-06-rg1/providers/Microsoft.Network/virtualNetworks/az104-06-vnet01/virtualNetworkPeerings/peer2to1",
            "name": "peer2to1",
            "remote_virtual_network_id": "/subscriptions/cd1d2821-1fc2-4fa9-a4e7-be7dde3b3714/resourceGroups/az-104-06-rg1/providers/Microsoft.Network/virtualNetworks/az104-06-vnet2",
            "resource_group_name": "az-104-06-rg1",
            "use_remote_gateways": false,
            "virtual_network_name": "az104-06-vnet01"
          },
          "dependencies": [
            "azurerm_resource_group.RG",
            "azurerm_virtual_network.vnet2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "vnet1tovnet3",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": false,
            "allow_gateway_transit": false,
            "allow_virtual_network_access": true,
            "id": "/subscriptions/cd1d2821-1fc2-4fa9-a4e7-be7dde3b3714/resourceGroups/az-104-06-rg1/providers/Microsoft.Network/virtualNetworks/az104-06-vnet01/virtualNetworkPeerings/peer1to3",
            "name": "peer1to3",
            "remote_virtual_network_id": "/subscriptions/cd1d2821-1fc2-4fa9-a4e7-be7dde3b3714/resourceGroups/az-104-06-rg1/providers/Microsoft.Network/virtualNetworks/az104-06-vnet3",
            "resource_group_name": "az-104-06-rg1",
            "use_remote_gateways": false,
            "virtual_network_name": "az104-06-vnet01"
          },
          "dependencies": [
            "azurerm_resource_group.RG",
            "azurerm_virtual_network.vnet3"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "vnet2tovnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": false,
            "allow_gateway_transit": false,
            "allow_virtual_network_access": true,
            "id": "/subscriptions/cd1d2821-1fc2-4fa9-a4e7-be7dde3b3714/resourceGroups/az-104-06-rg1/providers/Microsoft.Network/virtualNetworks/az104-06-vnet2/virtualNetworkPeerings/peer1to2",
            "name": "peer1to2",
            "remote_virtual_network_id": "/subscriptions/cd1d2821-1fc2-4fa9-a4e7-be7dde3b3714/resourceGroups/az-104-06-rg1/providers/Microsoft.Network/virtualNetworks/az104-06-vnet01",
            "resource_group_name": "az-104-06-rg1",
            "use_remote_gateways": false,
            "virtual_network_name": "az104-06-vnet2"
          },
          "dependencies": [
            "azurerm_resource_group.RG",
            "azurerm_virtual_network.vnet1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "vnet3tovnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": false,
            "allow_gateway_transit": false,
            "allow_virtual_network_access": true,
            "id": "/subscriptions/cd1d2821-1fc2-4fa9-a4e7-be7dde3b3714/resourceGroups/az-104-06-rg1/providers/Microsoft.Network/virtualNetworks/az104-06-vnet3/virtualNetworkPeerings/peer3to1",
            "name": "peer3to1",
            "remote_virtual_network_id": "/subscriptions/cd1d2821-1fc2-4fa9-a4e7-be7dde3b3714/resourceGroups/az-104-06-rg1/providers/Microsoft.Network/virtualNetworks/az104-06-vnet01",
            "resource_group_name": "az-104-06-rg1",
            "use_remote_gateways": false,
            "virtual_network_name": "az104-06-vnet3"
          },
          "dependencies": [
            "azurerm_resource_group.RG",
            "azurerm_virtual_network.vnet1"
          ]
        }
      ]
    }
  ]
}